<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".presentation.guitars.GuitarsFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_guitar_brand"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_guitar_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:hint="@string/guitar_brand"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/il_guitar_model"
        android:layout_marginTop="10dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/il_guitar_brand">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_guitar_model"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/guitar_model"
            android:inputType="textCapSentences" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/register_guitar_btn"
        android:layout_width="0dp"
        android:background="@drawable/bg_btn"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:text="@string/guitar_register"
        app:layout_constraintEnd_toEndOf="@+id/il_guitar_model"
        app:layout_constraintStart_toStartOf="@+id/il_guitar_model"
        app:layout_constraintTop_toBottomOf="@+id/il_guitar_model" />

    <Button
        android:id="@+id/del_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_delete"
        android:text="@string/crud_delete"
        android:textColor="@android:color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/register_guitar_btn"
        app:layout_constraintStart_toStartOf="@+id/register_guitar_btn"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>